# cascadeflow

./: .env.example  .env.template  .gitignore  .test_examples.sh  0001-fix-openclaw-use-HTTP-1.1-protocol-for-OpenAI-compat.patch  =0.7.0  AGENTS.md  CHANGELOG.md  CLEANUP_COMPLETE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_INSTRUCTIONS.md  DEPRECATE_TS_5.0.3.sh  DOCUMENTATION_VALIDATION_COMPLETE.md  FEATURE_PARITY_INDEX.md  FEATURE_PARITY_QUICK_REFERENCE.md  FEATURE_PARITY_SUMMARY.txt  FEATURE_PLAN_V2.md  FINAL_PRE_LAUNCH_SUMMARY.md  INTEGRATIONS_ARCHITECTURE.md  INTEGRATION_CORRECTIONS.md  LANGCHAIN_INTEGRATION_PLAN.md  LAUNCH_COMPLETE.md  LAUNCH_READINESS.md  LEMONY_ORG_README.md  LITELLM_FEATURES_ANALYSIS.md  LITELLM_PRICING_FIX_SUMMARY.md  LOCAL_PROVIDERS_ENHANCEMENT.md  MANIFEST.in  MARKETING_GUIDE.md  MILESTONE_1.1_DESIGN.md  MONOREPO_ARCHITECTURE.md  OPTIONAL_DEPS_IMPLEMENTATION.md  OPTION_3_FULL_VISION.md  OPTION_3_FULL_VISION_REFINED.md  OPT_IN_STRATEGY.md  PLAN_SUMMARY.md  PRE_LAUNCH_COMPLETE.md  PRE_LAUNCH_COMPLETION_REPORT.md  (+41 more)
.claude/: cascadeflow-context.md
.github/: CODEOWNERS  CURRENT_STATUS.md  LAUNCH_CHECKLIST.md  PRE_MERGE_CHECKLIST.md  PUBLISH_READINESS.md  PULL_REQUEST_TEMPLATE.md  TEST_FAILURES_EXPLAINED.md  configure-repo.sh  dependabot.yml  labeler-from-cascadeflow.yml  labeler.yml  models.yml
benchmark_results/: BACKWARDS_COMPATIBILITY_ANALYSIS.md  BACKWARDS_COMPAT_IMPLEMENTATION.md  COMPREHENSIVE_STATUS_SUMMARY.md  COMPREHENSIVE_VALIDATION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  GITHUB_ACHIEVEMENTS_STATUS.md  MASTER_IMPLEMENTATION_PLAN.md  SESSION_SUMMARY_OCT28_PART2.md  SESSION_SUMMARY_OCT28_PART3.md  SESSION_SUMMARY_OCT28_PART4.md  SESSION_SUMMARY_OCT28_PART5_FINAL.md  TIER_ROUTING_IMPLEMENTATION.md  UNIT_TEST_STATUS.md  V0.1.X_BACKWARDS_COMPATIBILITY_ANALYSIS.md  V0.2.0_FEATURE_INVENTORY.md  V0.2.0_FINAL_VALIDATION_REPORT.md  V0.2.0_IMPLEMENTATION_STATUS.md  V0.2.0_REALWORLD_BENCHMARK_REPORT.md  V0.2.0_RELEASE_READINESS.md  report.md  results.json  routing_analysis.json  routing_decisions.json  tool_calling_results.json  tool_calling_summary.json  v0_2_0_realworld_results.json
benchmarks/: __init__.py  cascade_routing_benchmark.py  comprehensive_tool_benchmark.py  customer_support.py  metrics.py  production_benchmark.py  run_all.py  truthfulqa.py  v0_2_0_realworld_benchmark.py  v0_2_1_comprehensive_benchmark.py
cascadeflow/: __init__.py  agent.py  batch_config.py  callbacks.py  complexity.py  config.py  config_loader.py  exceptions.py  execution.py  presets.py  proxy.py  result.py  routing.py  server.py  speculative.py  streaming.py  utils.py
docs/: ALIGNMENT_FLOOR_FIX_SUMMARY.md  ARCHITECTURE.md  BENCHMARK_EXPECTED_RESULTS.md  BENCHMARK_STRATEGY.md  BUGFIX_ALIGNMENT_FLOOR_v0_2_1.md  COMPREHENSIVE_IMPLEMENTATION_PLAN_V0.2.0.md  DEVELOPER_EXPERIENCE_REPORT.md  EDGE_DEPLOYMENT_ANALYSIS.md  GPT-5-SETUP.md  IMPLEMENTATION_STATUS.md  INSTALLATION.md  LATENCY_ANALYSIS_REPORT.md  LITELLM_STRATEGIC_ANALYSIS.md  MIGRATION_GUIDE_V0.2.0.md  MODEL-AVAILABILITY.md  OPENROUTER_INTEGRATION_PLAN.md  OPENROUTER_TYPESCRIPT_IMPLEMENTATION.md  PROXY_GAP_ANALYSIS.md  PYTHON_VS_TYPESCRIPT_FEATURES.md  README.md  REASONING_MODELS_SPEC.md  RELEASE_NOTES_V0.2.0.md  ROUTING_PROXY_ARCHITECTURE.md  ROUTING_PROXY_FACT_CHECK.md  ROUTING_PROXY_IMPLEMENTATION_PLAN.md  TYPESCRIPT_ML_IMPLEMENTATION_PLAN.md  TYPESCRIPT_PYTHON_COMPARISON.md  USER_PROFILE_EXECUTIVE_SUMMARY.md  USER_PROFILE_SYSTEM_DESIGN.md  V0.2.0_DOCUMENTATION_COMPLETE.md  V0.2.0_DOCUMENTATION_UPDATE_PLAN.md  V0.2.0_IMPLEMENTATION_STATUS.md  V0.2.0_PERFORMANCE_ANALYSIS.md  V0.2.0_RELEASE_PREP_SUMMARY.md  V0.2.1_IMPLEMENTATION_PLAN.md  V0.2.1_MILESTONES.md  V0.2.2_IMPLEMENTATION_PLAN.md  VALIDATION.md  benchmarking-guide.md  branch-cleanup-report.md
docs-site/: changelog.mdx  contributing.mdx  docs.json  for-coding-agents.mdx  index.mdx  why-cascadeflow.mdx
examples/: README.md  ROUTING_PROXY_README.md  agentic_multi_agent.py  basic_cascade.py  basic_usage.py  batch_processing.py  complete_cascade.py  cost_comparison.py  cost_forecasting_anomaly_detection.py  cost_tracking.py  custom_cascade.py  custom_validation.py  domain_specialists.py  edge_device.py  fastapi_integration.py  fastapi_proxy_routing.py  first_cascade.py  free_cascade.py  full_cascade.py  gateway_client_anthropic.py  gateway_client_embeddings.py  gateway_client_openai.py  guardrails_usage.py  huggingface_usage_examples.py  langchain_basic_usage.py  langchain_cascade_benchmark.py  langchain_cost_tracking.py  langchain_langgraph_multi_agent.py  langchain_langsmith.py  langchain_lcel_pipeline.py  langchain_model_discovery.py  langchain_streaming.py  migration_example.py  multi_instance_ollama.py  multi_instance_vllm.py  multi_provider.py  multi_step_cascade.py  ollama_cascade.py  phase1_complete_demo.py  preset_comparison.py  (+29 more)
investor-demo/: install.sh  (+1 more)
(+565 files in other folders)
